# SCU-Auto-Login

./: .gitignore  README.md  pyproject.toml  requirements.txt  script.user.js  server.py
src/scu_auto_login/: server.py
