[project]
authors = [{name = "withnolight", email = "succinamide@outlook.com"}]
dependencies = []
name = "SCU-Auto-Login"
requires-python = "==3.11.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
scu_auto_login = { path = ".", editable = true }
ddddocr = "==1.5.5"

[tool.pixi.tasks]
start = { cmd = "python -m scu_auto_login.server" }

[tool.pixi.dependencies]
flask = ">=3.1.2,<4"
flask_cors = ">=4.0.0,<5"
